--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 URL: https://github.com/andypicke/electricitymapsr
 BugReports: https://github.com/andypicke/electricitymapsr/issues
+Imports: 
+    lifecycle
